objects/GreenLight_API_Log__c.object
<CustomObject>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <label>Request Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Body__c</fullName>
        <label>Response Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Code__c</fullName>
        <label>Response Code</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GreenLight API Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Method__c</columns>
        <columns>URL__c</columns>
        <columns>Response_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>GreenLight API Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GreenLight API Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>